--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,33 @@
-/*********** FONTS ***********/
+/*********** FONTS AND COLOR SCHEME ***********/
 
 body {
   font-family: 'PT Sans', sans-serif;
+  background-color: #6A8EAE;
+  color: #F6F8FF;
 }
 
-h1, h2 {
+h1, h2, h3 {
   font-family: 'Play', sans-serif;
 }
 
+a {
+  color: #F6F8FF;
+  text-decoration-line: underline;
+  text-decoration-style: solid;  
+}
+
+.social-icons a {
+  text-decoration-line: none;
+  color: #020300;
+}
+
+a:hover {
+  color: #020300;
+} 
+
+a:visited .social-icons a:visited {
+  color: #020300;
+} 
 
 /*********** IMAGES ***********/
 
@@ -20,4 +40,42 @@ h1, h2 {
 #img-rocks {
   max-height: 300px;
   width: 100%;
+}
+
+/*******************************/
+
+#hr-header {
+  border: 0;
+  height: 2px;
+  background-image: linear-gradient(to right, rgba(246, 248, 255, 0), rgba(246, 248, 255, 0.75), rgba(246, 248, 255, 0)); /* F6F8FF */
+}
+
+.social-icons {
+  font-size: 2rem;
+  padding: 0.5em;
+  width: 100%;
+  text-align: center;
+  float: none;
+}
+
+.row {
+  margin-bottom: 20px;
+}
+
+/************* STICKY FOOTER **********/
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #EFF0E4;
+  padding: 10px;
 }
