--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,8 @@ h1, h2, h3 {
 a {
   color: #f6f8ff;
   text-decoration: underline solid;
+  display:inline-block;
+  padding-bottom: 15px; /* add spacing hre and not columns because they are nested and it gets messy */
 }
 
 a:hover {
@@ -25,6 +27,7 @@ a:visited {
 .social-icons a {
   text-decoration: none;
   color: #020300;
+  padding: 0;
 }
 
 /*********** IMAGES *******************/
@@ -44,10 +47,6 @@ a:visited {
   border: 0;
   height: 2px;
   background-image: linear-gradient(to right, rgba(246, 248, 255, 0), rgba(246, 248, 255, 0.75), rgba(246, 248, 255, 0)); /* f6f8ff */
-}
-
-#last-row {
-  margin-bottom: 20px;
 }
 
 /************* STICKY FOOTER **********/
