--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,3 @@
-/***** REMOVE ALL CORNERS *********/
-
-* {
-  -webkit-border-radius: 0 !important;
-     -moz-border-radius: 0 !important;
-          border-radius: 0 !important;
-}
-
 /***** TEXT AND COLOR SCHEME *********/
 body {
   font-family: 'PT Sans', sans-serif;
@@ -22,7 +14,7 @@ h3 {
 a {
   color: #f6f8ff;
   text-decoration: underline solid;
-  display:inline-block;
+  display: inline-block;
   padding-bottom: 15px; /* add spacing hre and not columns because they are nested and it gets messy */
 }
 
@@ -40,17 +32,18 @@ a:visited {
   padding: 0;
 }
 
+
 /*********** IMAGES *******************/
 #img-logo {
-  border-radius: 50% !important; /* ovverride the *{} style */
   max-height: 110px;
   margin: 15px;
 }
 
-#img-rocks {
+#img-keyboard {
   max-height: 300px;
   width: 100%;
 }
+
 
 /**************************************/
 #hr-header {
@@ -59,11 +52,13 @@ a:visited {
   background-image: linear-gradient(to right, rgba(246, 248, 255, 0), rgba(246, 248, 255, 0.75), rgba(246, 248, 255, 0)); /* f6f8ff */
 }
 
+
 /************* STICKY FOOTER **********/
 html {
   position: relative;
   min-height: 100%;
 }
+
 body {
   margin-bottom: 60px;
 }
@@ -77,6 +72,7 @@ body {
   padding: 10px;
 }
 
+
 /************* FOOTER ICONS **********/
 .social-icons {
   font-size: 2rem;
@@ -86,8 +82,8 @@ body {
   float: none;
 }
 
-/************* MODALS ****************/
 
+/************* MODALS ****************/
 .modal-body {
   background-color: #6a8eae;
   color: #f6f8ff;
@@ -96,6 +92,7 @@ body {
 .modal-content {
   background-color: #6a8eae;
   color: #f6f8ff;
+  border-radius: 0;
 }
 
 .modal-footer {
@@ -106,12 +103,13 @@ body {
   border-bottom: 1px solid #f6f8ff;
 }
  
-/************* CUSTOM BUTTON ****************/
 
+/************* CUSTOM BUTTON ****************/
 .btn-themecolor { 
   color: #6a8eae; 
   background-color: #f6f8ff; 
   border-color: #f6f8ff; 
+  border-radius: 0;
 } 
  
 .btn-themecolor:hover, 
